--- a/Splav2/Splav2.csproj
+++ b/Splav2/Splav2.csproj
@@ -13,4 +13,8 @@
     <Folder Include="ModelForMet\ViewModels\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MVVM\MVVM.csproj" />
+  </ItemGroup>
+
 </Project>
